[Titles animation] fixed overflow bug

--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -32,6 +32,11 @@
   font-size: 12rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+  opacity: 0;
+
+  &.animated-text {
+    opacity: 1;
+  }
 
   @media (min-width: $stop-scaling) {
     max-width: 990px;
@@ -94,8 +99,8 @@
   font-size: 2.4rem;
   line-height: 1.27;
   animation-name: fadeIn, translateYText;
-  animation-duration: $max-animation-time;
-  animation-delay: $s-animation-time;
+  animation-duration: $s-animation-time;
+  animation-delay: 0.8s;
   animation-timing-function: cubic-bezier(0, 0, 0, 1);
   animation-fill-mode: both;
 
@@ -147,6 +152,10 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.2;
+  animation-name: fadeIn;
+  animation-duration: $s-animation-time;
+  animation-delay: 1s;
+  animation-fill-mode: both;
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 16px;
@@ -162,6 +171,11 @@
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: -0.04em;
+  opacity: 0;
+
+  &.animated-text {
+    opacity: 1;
+  }
 
   @media (min-width: $stop-scaling) {
     margin: 0 0 0 -5px;
