--- a/source/scss/blocks/words.scss
+++ b/source/scss/blocks/words.scss
@@ -20,4 +20,10 @@
       transition-duration: $s-animation-time;
     }
   }
+
+  &--finished {
+    .word {
+      overflow: visible;
+    }
+  }
 }
